--- a/api_implementation/src/main/res/values/strings.xml
+++ b/api_implementation/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="api_skip">Skip</string>
     <string name="api_email">Email Address</string>
     <string name="api_password">Password</string>
+    <string name="api_forgot_password">Forgot password?</string>
     <string name="api_password_confirmation">Password Confirmation</string>
     <string name="api_name">Name</string>
     <string name="api_phone_number">Phone Number</string>
